Fix footer arrangement on smaller displays

--- a/components/Footer.module.scss
+++ b/components/Footer.module.scss
@@ -34,8 +34,8 @@
 
 .badges {
   a {
-    img {
-      margin-left: 6px;
+    & + a {
+      margin-left: 1rem;
     }
   }
 }
@@ -78,20 +78,17 @@
 @media (max-width: 650px) {
   .inner {
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
   }
 
   .badges {
-    a {
-      img {
-        display: block;
-        margin: 6px auto;
-      }
-    }
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
   }
 
   .navigation {
-    align-items: center;
+    align-items: flex-start;
 
     nav {
       a {
